Fix overlapping shadow and "les pour" not revealing enough

--- a/src/App.css
+++ b/src/App.css
@@ -22,16 +22,6 @@
   }
 .body { grid-area: body;}
 
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    width: 100%;
-    height: 50px;
-    background-color: rgba(255,255,255,0.90);
-}
-
 .buttons {
     position: fixed;
     bottom: 0;
@@ -39,7 +29,9 @@
     width: 100%;
     flex-grow: 10;
     height: 15vw;
+    max-height: 160px;
     min-height: 60px;
+    background: linear-gradient( rgba(0,212,255,0) 0%, var(--datan-white) 66%, var(--datan-white)100%);
 }
 
 .flex {
@@ -95,9 +87,19 @@
 }
 
 .shadow {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
+    position: relative;
 }
-  
+.shadow:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
   .shadow-2 {
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
@@ -114,3 +116,13 @@
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
   }
   
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 50px;
+    background-color: rgba(255,255,255,0.90);
+}
+
