--- a/src/pages/Questions.module.css
+++ b/src/pages/Questions.module.css
@@ -11,7 +11,7 @@
   .title-container {
     display: flex;
     align-items : center;
-    height: 75vh;
+    height: 66vh;
   }
 
   .title {
